# JuCC

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  codecov.yml  grammar.g
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: jucc-issue-template.md
.github/workflows/: build_tests.yml
benchmark/: README.md
benchmark/input/: benchmark_grammar.g  in1.cc
benchmark/main/: jucc_benchmark.cpp
build_support/: benchmark_CMakeLists.txt.in  gtest_CMakeLists.txt.in  nlohmann_json_CMakeLists.txt.in  run_clang_format.py  run_clang_tidy.py  run_clang_tidy_extra.py
docs/: README.md  cpp_guidelines.md  cpp_guidelines_code_style.md  tech_clangtools.md  tech_docker.md  tech_git.md
script/installation/: packages.sh
server/: package-lock.json  package.json  server.js
server/public/: jquery.min.js  package.json  tree.css
server/views/: index.ejs
src/grammar/: first_follow.cpp  grammar.cpp  grammar.g
src/include/grammar/: grammar.h
src/include/lexer/: lexer.h
src/include/main/: jucc.h
src/include/parser/: parser.h  parser_stack.h  parsing_table.h
src/include/parsing/: parsing.h  parsing_table.h
src/include/parsing/utils/: parsing_table.h
src/include/symbol_table/: symbol_table.h  symbole_table.h
src/include/trie/: memoryEfficientTrie.h
src/include/utils/: first_follow.h  leftFactoring.h  leftRecursion.h  left_factoring.h  left_recursion.h  utils.h
src/include/utils/trie/: memory_efficient_trie.h
src/lexer/: lexer.cpp
src/main/: jucc.cpp  main.cpp
src/parser/: parser.cpp  parser_stack.cpp  parsing_table.cpp
src/parsing/: parsing.cpp  parsing_table.cpp
src/parsing/utils/: parsing_table.cpp
src/symbol_table/: symbol_table.cpp
src/trie/: memoryEfficientTrie.cpp
src/utils/: first_follow.cpp  leftFactoring.cpp  leftRecursion.cpp  left_factoring.cpp  left_recursion.cpp  utils.cpp
src/utils/trie/: memory_efficient_trie.cpp
test/: README.md  main.cpp
test/grammar/: grammar_test.cpp  grammar_test_0.g  grammar_test_1.g  grammar_test_10.g  grammar_test_11.g  grammar_test_12.g  grammar_test_14.g  grammar_test_15.g  grammar_test_16.g  grammar_test_17.g  grammar_test_2.g  grammar_test_3.g  grammar_test_3b.g  grammar_test_5.g  grammar_test_7.g  grammar_test_8.g  grammar_test_9.g
test/lexer/: arithmetic.txt  comments.txt  input.txt  input2.txt  input3.txt  input_err1.txt  input_err2.txt  lexer_test.cpp  scope_error.txt
test/main/: jucc_test.cpp  main_test.cpp
test/parser/: grammar.g  parser_stack_test.cpp  parser_test.cpp  parsing_table_test.cpp
test/parsing/: parsing_table_test.cpp  parsing_test.cpp
test/parsing/utils/: parsing_table_test.cpp
test/symbol_table/: symbol_table_test.cpp
test/trie/: trie_test.cpp
test/utils/: utils_test.cpp
test/utils/trie/: trie_test.cpp
